styles.css
*, *::after, *::before {
    box-sizing: border-box;
}

body {
    background-color: #F6F6F6;
    display: flex;
    flex-direction: column;
    align-items: center;
    font-family: sans-serif;
}

button {
    cursor: pointer;
    opacity: 1;
}

button:hover {
    filter: brightness(0.9);
}

.deep-border, .light-border {
    border: 2px solid #333333;
}

.deep-border {
    border-radius: 15px;
}

.light-border {
    border-radius: 5px;
}

#cal-container {
    margin-top: 10px;
    background-color: #AAAAAA;
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 400px;
    height: 564px;
    padding: 20px;
    gap: 18px;
}

#cal-container #display {
    width: 356px;
    height: 120px;
    padding: 20px;
    background-color: #EEEEEE;
    text-align: right;
    display: flex;
    flex-direction: column;
    gap: 10px;
}

#cal-container #display #prev-operand {
    font-size: 20px;
}

#cal-container #display #current-operand {
    font-size: 45px;
    font-weight: 500;   
}

#cal-container #control {
    display: flex;
    gap: 10px;
    width: 100%;
}

#cal-container #control button {
    width: 100%;
    height: 68px;
    font-size: 20px;
    color: #333333;
}

#cal-container #control #clear-btn {
    background-color: #FFAAAA;
}

#cal-container #control #delete-btn {
    background-color: #AAAAFF;
}

#cal-container #keys {
    display: flex;
    width: 100%;
    gap: 10px;
}

#cal-container #keys > div {
    flex-grow: 1;
    display: flex;
    flex-wrap: wrap;
    gap: 10px;
}

#cal-container #keys button {
    width: 81px;
    height: 68px;
    font-size: 18px;
}

